- Added title truncation on cover view - Fixed bug that caused the cover view to render n^2 times. Yikes.

--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,12 @@ body {
 	clear: both;
 }
 
+.truncate-ellipsis {
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+
 /* app header */
 .app-header {
 	position: fixed;
